compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_put_stmt_wrong_type_only_steam.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "put : 1.0"

---
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 6..9: mismatched types
| note in file FileId(1) for 6..9: this is of type `real`
| info: `real` is not an integer type
