compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_put_stmt_wrong_type_stream.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var s : real\nput : s,  1\n"

---
"s"@(FileId(1), 4..5) [Declared]: ref_mut real
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 19..20: mismatched types
| note in file FileId(1) for 19..20: expected integer type
