compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_put_stmt_wrong_type_width.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "var w : real\nput 1 : w\n"

---
"w"@(FileId(1), 4..5) [Declared]: real
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 21..22: mismatched types
| note in file FileId(1) for 21..22: this is of type `real`
| info: `real` is not an integer type
