compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_put_stmt_wrong_value_stream.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type k : int\nput : k, 1\n"

---
"k"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 19..20: cannot use `k` as an expression
| error in file FileId(1) for 19..20: `k` is a reference to a type, not a variable
| note in file FileId(1) for 5..6: `k` declared here
