compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_result_stmt_in_function.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "fcn oeuf : int result 0 end oeuf"

---
"oeuf"@(FileId(1), 4..8) [Declared]: function -> int
"<root>"@(dummy) [Declared]: <error>

