compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_result_stmt_in_top_level_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: result 0

---
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 0..8: cannot use `result` here
| error in file FileId(1) for 0..8: `result` statement is only allowed in function bodies
